--- a/publisher-campaign.css
+++ b/publisher-campaign.css
@@ -5,6 +5,7 @@
   --shade-of-green: #F0F7FF;
   --text-title-color: #333333;
   --text-body-color: #3A3A3A;
+  --muted: #c4c4c4;
 }
 
 body {
@@ -24,8 +25,17 @@ h2 {
   font-weight: 600;
 }
 
+h4 {
+  font-weight: 600;
+  font-size: 1.125rem;
+}
+
 table {
   background-color: #fff;
+}
+
+th {
+  width: max-content;
 }
 
 .btn {
@@ -51,6 +61,11 @@ table {
   font-weight: 400;
 }
 
+.dropdown-menu {
+  width: 28.5rem;
+  z-index: 999999999;
+}
+
 .check-complete.custom-control-input:checked~.custom-control-label::before {
   color: var(--dark-green);
   border-color: var(--dark-green);
@@ -60,8 +75,25 @@ table {
 .custom-switch .check-complete.custom-control-input:checked~.custom-control-label::after {
   background-color: var(--dark-green);
 }
+
 .check-complete.custom-control-label {
   color: var(--dark-green);
+}
+
+.pagination li {
+  margin-right: 0.35rem;
+}
+
+.pagination li a {
+  background-color: var(--muted);
+  color: #fff;
+  border-radius: 5px;
+}
+
+.page-item.active .page-link {
+  background-color: var(--secondary-color);
+  border-color: var(--secondary-color);
+  color: #fff;
 }
 
 
@@ -76,7 +108,7 @@ table {
   }
 
   h2 {
-    font-size: ;
+    font-size: 1.5rem;
   }
 
   .btn {
