--- a/nav.css
+++ b/nav.css
@@ -1,7 +1,7 @@
 :root {
   --sideBar-primary-color: #b9b9b9;
-  --sideBar-secondary-color: #e5e5e5;
-  --sideBar-active: #362f74;  
+  --sideBar-secondary-color: #f5f6fa;
+  --sideBar-active: #362f74;
 }
 
 body {
@@ -9,6 +9,9 @@ body {
   font-family: "Source Sans Pro", sans-serif !important;
 }
 
+.main-content{
+  transition: all .5s ease;
+}
 
 .side-bar__name:hover,
 .side-bar__name:active {
@@ -38,7 +41,7 @@ body {
   transition: all .2s linear;
 }
 
-.sidebar > * {
+.sidebar>* {
   padding: 0 20px;
 }
 
@@ -57,8 +60,8 @@ body {
 
 .sidebar__input:focus,
 .sidebar__input:active {
-  border-bottom-color:var(--sideBar-active);
- }
+  border-bottom-color: var(--sideBar-active);
+}
 
 .sidebar__input::placeholder {
   color: var(--sideBar-primary-color);
@@ -75,7 +78,12 @@ body {
 }
 
 .header,
-.main-content > header {
+.main-content>header {
+  background-color: var(--sideBar-secondary-color);
+}
+
+header,
+.stickyNav {
   background-color: var(--sideBar-secondary-color);
 }
 
@@ -124,7 +132,7 @@ body {
   border-radius: 99999px;
   width: 100%;
   background-color: transparent;
-  padding: 3px 10px ;
+  padding: 3px 10px;
   border: none;
   border: 1px solid #b9b9b9;
 }
@@ -145,7 +153,7 @@ body {
 }
 
 @media (min-width: 768px) {
-  
+
   .sidebar {
     width: 200px;
     border-top-right-radius: 20px;
@@ -169,7 +177,7 @@ body {
 
   .main-content {
     margin-left: 200px;
-    background-color: #e5e5e5;
+    background-color: #f5f6fa;
   }
 
 
@@ -182,9 +190,9 @@ body {
     width: 50px;
   }
 
-  
+
   .collapse-sidebar .sidebar__icon-active::after {
-    content:  '';
+    content: '';
     position: absolute;
     width: 15px;
     height: 25px;
@@ -198,7 +206,7 @@ body {
     display: none;
   }
 
-  .collapse-sidebar .sidebar > * {
+  .collapse-sidebar .sidebar>* {
     padding: 0 14px;
   }
 
